# This file is checked into version control, which is normal.
# Please check it back out if you need to delete src-gen:
#   rm -rf test/Rust/src-gen && git checkout test/Rust/src-gen
#
# The reason this is here is that it allows all generated test
# projects to share the same compilation artifacts. This lets us
# build dependencies only once and speeds up tests enormously.
#
# One downside is that changing the location of dependencies may
# cause cargo to fail because it has recorded another location in
# Cargo.lock. Changing locations is useful for development, for
# instance, to use a local version of the reactor_rt crate.
#
# Using this file is only an optimisation for our tests in CI
# and locally. It's not *needed* for the tests to pass or anything.
# If it causes problems, we can throw it away or hide it.
[workspace]
members = ["*"]
exclude = ["concurrent", "target", "multiport", "generics"]

[profile.release-with-min-size] # use `build-type: MinSizeRel`
inherits = "release"
opt-level = "s"

[profile.release-with-debug-info] # use `build-type: RelWithDebInfo`
inherits = "release"
debug = true
